k8s/namespace.yaml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "flickrphotosearch",
    "labels": {
      "name": "flickrphotosearch"
    }
  }
}
