k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flickrphotosearch-ingress
  namespace: flickrphotosearch
  annotations:
    kubernetes.io/ingress.global-static-ip-name: flickrphotosearch-ingress

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: flickrphotosearch-frontend
          servicePort: 80
      - path: /api
        backend:
          serviceName: flickrphotosearch-backend
          servicePort: 8080
